23. Including Javascript and CSS Files in Your Project

--- a/src/main/resources/templates/projects/list-projects.html
+++ b/src/main/resources/templates/projects/list-projects.html
@@ -11,14 +11,14 @@
     <h3> Projects Directory </h3>
     <hr>
     <!-- Add New Employee Button -->
-    <a th:href="@{/projects/new}">
-        <!--       class="btn btn-primary btn-sm mb-3">-->
+    <a th:href="@{/projects/new}"
+               class="btn btn-primary btn-sm mb-3">
         Project New
     </a>
     <br></br>
 
-    <table>
-        <thead>
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
         <tr>
             <th> Project Name</th>
             <th> Project Stage</th>
