--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -12,14 +12,14 @@
     <hr>
 
     <!-- Add New Employee Button -->
-    <a th:href="@{/employees/new}">
-        <!--       class="btn btn-primary btn-sm mb-3">-->
+    <a th:href="@{/employees/new}"
+               class="btn btn-primary btn-sm mb-3">
         Add Employee
     </a>
     <br></br>
 
-    <table>
-        <thead>
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
         <tr>
             <th> First Name</th>
             <th> Last Name</th>
