--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -6,44 +6,50 @@
 <body>
 
 <nav th:replace="layouts :: navbar"></nav>
+<div class="container">
+    <div>
+        <h4>Current Projects </h4>
+        <table>
+            <thead>
+            <tr>
+                <th> Project Name</th>
+                <th> Project Stage</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="aProject : ${projects}">
+                <td th:text="${aProject.name}"></td>
+                <td th:text="${aProject.stage}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
-<div>
-    <h4>Current Projects </h4>
-    <table>
-        <thead>
-        <tr>
-            <th> Project Name</th>
-            <th> Project Stage</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="aProject : ${projects}">
-            <td th:text="${aProject.name}"></td>
-            <td th:text="${aProject.stage}"></td>
-        </tr>
-        </tbody>
-    </table>
+    <div>
+        <h4>Current Employees </h4>
+        <table>
+            <thead>
+            <tr>
+                <th> First Name</th>
+                <th> Last Name</th>
+                <th> Email</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="aEmployee : ${employees}">
+                <td th:text="${aEmployee.firstName}"></td>
+                <td th:text="${aEmployee.lastName}"></td>
+                <td th:text="${aEmployee.email}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col-md-4">
+        <canvas id="myPieChart" height="50" width="50"></canvas>
+    </div>
 </div>
 
-<div>
-    <h4>Current Employees </h4>
-    <table>
-        <thead>
-        <tr>
-            <th> First Name</th>
-            <th> Last Name</th>
-            <th> Email</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="aEmployee : ${employees}">
-            <td th:text="${aEmployee.firstName}"></td>
-            <td th:text="${aEmployee.lastName}"></td>
-            <td th:text="${aEmployee.email}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+<script type="text/javascript" th:src="@{js/myChart.js}"></script>
 
 </body>
 </html>
