--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -45,14 +45,14 @@
                 <tr>
                     <th> First Name</th>
                     <th> Last Name</th>
-                    <th> Email</th>
+                    <th> Project Count</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="aEmployee : ${employees}">
-                    <td th:text="${aEmployee.firstName}"></td>
-                    <td th:text="${aEmployee.lastName}"></td>
-                    <td th:text="${aEmployee.email}"></td>
+                <tr th:each="aEmployeeProjectCnt : ${employeesListProjectsCnt}">
+                    <td th:text="${aEmployeeProjectCnt.firstName}"></td>
+                    <td th:text="${aEmployeeProjectCnt.lastName}"></td>
+                    <td th:text="${aEmployeeProjectCnt.projectCount}"></td>
                 </tr>
                 </tbody>
             </table>
