--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -31,6 +31,11 @@
         </div>
         <div class="col-md-4">
             <canvas id="myPieChart" height="50" width="50"></canvas>
+
+            <script>
+                var chartData = "[[${projectStatusCnt}]]"
+            </script>
+
         </div>
     </div>
 </div>
