--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -9,6 +9,8 @@
 
 <div class="container">
     <h3>Main Dashboard</h3>
+    <a th:text="${versionNumber}"></a>
+
     <hr>
 
     <h4>Current Projects </h4>
