52. Spring Security: Postgres Database with JDBC Authorization/Authentication 53. Spring Security: User Registration and Password Encryption

--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -16,6 +16,8 @@
 
             <input type="text" placeholder="Email Address" th:field="${employee.email}">
 
+            <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+
             <button type="submit">Create Employee</button>
 
         </form>
