--- a/src/main/resources/templates/projects/new-project.html
+++ b/src/main/resources/templates/projects/new-project.html
@@ -8,7 +8,7 @@
 <nav th:replace="layouts :: navbar"></nav>
 
     <div class="container">
-        <form action="/projects/save" method="POST" th:object="${project}">
+        <form th:action="@{/projects/save}" method="POST" th:object="${project}">
 
             <input type="text" placeholder="Project Name" th:field="${project.name}">
 
@@ -27,6 +27,8 @@
                         th:text = "${employee.firstName}">
                 </option>
             </select>
+
+            <!--<input type="hidden" name="_csrf" th:value="${_csrf.token}" />-->
 
             <button type="submit">Create Project</button>
 
